# Portfolio

./: .env.example  .gitignore  Agent Office Ship.dc.html  CLAUDE.md  HANDOFF.md  Makefile  README.md  docker-compose.yml  index.html  lifeos-spec.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_proposals.py
backend/app/: config.py  llm.py  main.py  scheduler.py  schemas.py
backend/app/agents/: agent.py  contributions.py  tools.py
backend/app/api/: admin.py  briefing.py  capture.py  chat.py  deps.py  documents.py  entities.py  finance.py  health.py  knowledge.py  observations.py  priorities.py  proposals.py  review.py  tasks.py  weekly_plan.py
backend/app/db/: models.py  session.py
backend/app/flows/: alerts.py  capture.py  chat_agent.py  context.py  daily_briefing.py  finance.py  proposals.py  render.py  routing.py  weekly_context.py  weekly_plan.py  weekly_render.py  weekly_review.py  whatnow.py
backend/app/integrations/: email.py  gcal.py  telegram.py  weather.py
backend/app/knowledge/: chunking.py  embeddings.py  indexing.py  observations.py  search.py
backend/app/prompts/: business.md  chief_of_staff.md  daily_briefing.md  domain_contribution.md  faith.md  (+8 more)
backend/outbox/: LifeOS_Briefing_2026-07-04.html
backend/tests/: test_alerts.py  test_briefing_format.py  test_chunking.py  test_embeddings.py  test_observations.py  test_phase4_agents.py  test_routing_finance.py  test_weekly_plan.py
(+93 files in other folders)
